<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="loading">正在加载中...</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="action_save">创建</string>
    <string name="action_sign_in"/>
    <string name="action_sign_in_short">登录</string>
    <string name="app_name">中衡电气</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="create_spotpricing">创建电价</string>
    <string name="create_store">创建营业厅</string>
    <string name="create_transformer">创建台区</string>
    <string name="create_userone">创建营业厅管理员</string>
    <string name="create_usertwo">创建台区管理员</string>
    <string name="create_userThree">创建二级用户</string>
    <string name="define_roundedimageview"/>
    <string name="empty"/>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">请输入正确的密码</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="forget">忘记密码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_password">请输入密码</string>
    <string name="input_username">请输入账号</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="login_detail">许昌中衡电气有限公司 客服热线：0374-3592608</string>
    <string name="login_progress">正在登录</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="register">立即注册</string>
    <string name="save">保存</string>
    <string name="selected_store">选择营业厅</string>
    <string name="selected_transformer">选择台区</string>
    <string name="spotpricing">电价</string>
    <string name="spotpricing_flatPrice">平电价(元)</string>
    <string name="spotpricing_peakPrice">峰电价(元)</string>
    <string name="spotpricing_pointedPrice">尖电价(元)</string>
    <string name="spotpricing_priceCount">总电价(元)</string>
    <string name="spotpricing_type">价格类型</string>
    <string name="spotpricing_valleyPrice">谷电价(元)</string>
    <string name="store_ContactWay">联系方式</string>
    <string name="store_address">地址</string>
    <string name="store_id">编号</string>
    <string name="store_linkman">联系人</string>
    <string name="store_name">名称</string>
    <string name="stores">营业厅</string>
    <string name="tab_action">特殊操作</string>
    <string name="tab_buy">用户购电</string>
    <string name="tab_me">资料管理</string>
    <string name="tab_search">数据查询</string>
    <string name="title_activity_bluetooth_operation">BluetoothOperationActivity</string>
    <string name="transformer">台区</string>
    <string name="transformer_cotainStore">所属营业厅</string>
    <string name="transformer_cotain">所属台区</string>
    <string name="upgrade_spotpricing">编辑电价</string>
    <string name="upgrade_store">编辑营业厅</string>
    <string name="upgrade_transformer">编辑台区</string>
    <string name="device_list">检测设备</string>
    <string name="user_one">营业厅管理员</string>
    <string name="create_storemgr_user">创建营业厅管理员</string>
    <string name="create_transformermgr_user">创建台区管理员</string>
    <string name="create_device_user">创建设备用户</string>
    <string name="input_voltageRatio">请输入电压倍率</string>
    <string name="voltageRatio">电压倍率</string>
    <string name="input_currentRatio">请输入电流倍率</string>
    <string name="currentRatio">电流倍率</string>
    <string name="input_price">请选择电价</string>
    <string name="price">电价</string>
    <string name="meterNum">设备编号</string>
    <string name="input_meterNum">请输入设备编号</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="phone">手机号码</string>
    <string name="company">公司名称</string>
    <string name="input_company">请输出公司名称</string>
    <string name="expand">查看详情</string>
    <string name="shrink">收缩</string>
</resources>
