<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/imeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconfont_must"
            android:hint="手机ime码"
            android:inputType="numberPassword"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="手机ime码"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconfont_must"
            android:hint="@string/store_id"
            android:inputType="number"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_id"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconfont_must"
            android:hint="@string/store_name"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_name"
            app:met_singleLineEllipsis="true" />

        <LinearLayout
            android:id="@+id/store_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16.0dip"
                android:layout_marginRight="16.0dip"
                android:layout_weight="2.0"
                android:drawableLeft="@drawable/iconfont_must"
                android:gravity="center_vertical"

                android:text="@string/transformer_cotainStore"
                android:textSize="@dimen/text_third" />

            <TextView
                android:id="@+id/store_spinner"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3.0" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/transformer_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16.0dip"
                android:layout_marginRight="16.0dip"
                android:layout_weight="2.0"
                android:drawableLeft="@drawable/iconfont_must"
                android:gravity="center_vertical"
                android:text="@string/transformer_cotain"
                android:textSize="@dimen/text_third" />

            <TextView
                android:id="@+id/transformer_spinner"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3.0" />
        </LinearLayout>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/voltageRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconfont_must"
            android:hint="@string/input_voltageRatio"
            android:inputType="number"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/voltageRatio"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/currentRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconfont_must"
            android:hint="@string/input_currentRatio"
            android:inputType="number"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/currentRatio"
            app:met_singleLineEllipsis="true" />


        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/iconfont_must"
            android:drawableRight="@drawable/common_arrows_right"
            android:gravity="center_vertical"
            android:hint="@string/input_price"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/text_third" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/phone"
            app:met_singleLineEllipsis="true" />

        <LinearLayout
            android:id="@id/action_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_centerInParent="true"
                android:background="@color/Green"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/White"
                android:textSize="@dimen/text_second" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>