<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@id/normal_with_input_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/store_id"
            android:textSize="@dimen/text_third" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@id/store_id"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:hint="@string/store_id"
            android:inputType="number"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_id"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/store_name"
            android:textSize="@dimen/text_third" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@id/store_name"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:hint="@string/store_name"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_name"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/store_address"
            android:textSize="@dimen/text_third" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@id/store_address"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:hint="@string/store_address"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_address"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/store_linkman"
            android:textSize="@dimen/text_third" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@id/store_linkname"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:hint="@string/store_linkman"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_linkman"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/store_ContactWay"
            android:textSize="@dimen/text_third" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@id/store_ContactWay"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:hint="@string/store_ContactWay"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_ContactWay"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/action_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_centerInParent="true"
            android:background="@color/Green"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/White"
            android:textSize="@dimen/text_second" />
    </LinearLayout>
</LinearLayout>