<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/imeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/iconfont_must"
        android:hint="手机ime码"
        android:inputType="number"
        android:textSize="@dimen/text_third"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="手机ime码"
        app:met_singleLineEllipsis="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/store_id"
            android:textSize="@dimen/text_third" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_id"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:hint="@string/store_id"
            android:inputType="number"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_id"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/store_name"
            android:textSize="@dimen/text_third" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/user_name"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:hint="@string/store_name"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/text_third"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/store_name"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/store_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="2.0"
            android:drawableLeft="@drawable/iconfont_must"
            android:gravity="center_vertical"

            android:text="@string/transformer_cotainStore"
            android:textSize="@dimen/text_third" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/store_spinner"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/disabled_color"
            app:ms_arrowSize="@dimen/text_third"
            app:ms_baseColor="@color/disabled_color"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="false"
            app:ms_errorColor="@color/error_color"
            app:ms_floatingLabelColor="@color/disabled_color"
            app:ms_floatingLabelText="@string/selected_store"
            app:ms_highlightColor="@color/Green"
            app:ms_hint="@string/selected_store"
            app:ms_multiline="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transformer_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="2.0"
            android:drawableLeft="@drawable/iconfont_must"
            android:gravity="center_vertical"
            android:text="@string/transformer_cotain"
            android:textSize="@dimen/text_third" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/transformer_spinner"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            app:ms_alignLabels="false"
            app:ms_arrowColor="@color/disabled_color"
            app:ms_arrowSize="@dimen/text_third"
            app:ms_baseColor="@color/disabled_color"
            app:ms_enableErrorLabel="false"
            app:ms_enableFloatingLabel="false"
            app:ms_errorColor="@color/error_color"
            app:ms_floatingLabelColor="@color/disabled_color"
            app:ms_floatingLabelText="@string/transformer_cotain"
            app:ms_highlightColor="@color/Green"
            app:ms_hint="@string/selected_transformer"
            app:ms_multiline="false" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="购电权限设置"
            android:textSize="@dimen/text_third"></TextView>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/buy_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true"></android.support.v7.widget.SwitchCompat>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="调试权限设置"
            android:textSize="@dimen/text_third"></TextView>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/test_switch"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true"></android.support.v7.widget.SwitchCompat>
    </RelativeLayout>

    <LinearLayout
        android:id="@id/action_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_centerInParent="true"
            android:background="@color/Green"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/White"
            android:textSize="@dimen/text_second" />
    </LinearLayout>

</LinearLayout>